Extract GE purely from code